# Template_Project

./: .gitignore  CMakeLists.txt  README.md  create_project.py  main.c  main.h
sc_libs/: CMakeLists.txt  sc_io.c  sc_io.h
xlnx_libs/: CMakeLists.txt
xlnx_libs/hw_config/: xparameters.h
xlnx_libs/standalone/: bspconfig.h  sc_io.h  sleep.h  xenv.h  xil_io.h  xil_printf.h
xlnx_libs/sysmon/: xsysmon_g.c
xlnx_libs/tmrctr/: xtmrctr_g.c
